# podio

./: .gitignore  CMakeLists.txt
datamodels/: CMakeLists.txt
datamodels/datamodel/: EventInfoCollection.h  ExampleWithArraymeConst.h  ExampleWithArraymeObj.h  ExampleWithStruct.h  ExampleWithStructCollection.h  ExampleWithStructObj.h  SimpleStruct.h
datamodels/src/: ExampleWithArraymeCollection.cc  ExampleWithStructCollection.cc  selection.xml
doc/: branchREADME.md
include/podio/: ASCIIWriter.h
python/: test_EventStore.py
src/: ASCIIWriter.cc  CMakeLists.txt
tests/: CMakeLists.txt  datalayoutcopy.yaml  readcopy.cpp  unittest.cpp  write_asciicopy.cpp  writecopy.cpp
tests/ASCIItest/: ASCIIReader.cc  ASCIIReader.h  CMakeLists.txt  read_asciicopy.cpp
tests/datamodel/: ExampleWithArrayme.h  ExampleWithArraymeCollection.h  ExampleWithArraymeData.h  ExampleWithStructConst.h  ExampleWithStructData.h  SimpleStruct.h
tests/src/: ExampleWithArrayme.cc  ExampleWithArraymeConst.cc  ExampleWithArraymeObj.cc  ExampleWithStruct.cc  ExampleWithStructConst.cc  ExampleWithStructObj.cc  selection.xml
